--- a/code/data-exploration.ipynb
+++ b/code/data-exploration.ipynb
@@ -37,8 +37,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/12/03 23:13:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/12/03 23:13:07 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/12/06 11:35:20 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "/Users/priyangshupal/anaconda3/lib/python3.11/site-packages/pyspark/sql/context.py:157: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
       "  warnings.warn(\n"
      ]
@@ -158,17 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "4032c40c-aae8-43f4-893f-e41b6a3009fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "30304a2e-d61a-47c6-9503-08596f0c4236",
    "metadata": {},
    "outputs": [],
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b31def17-b7a1-4d40-852a-8800a92b3966",
    "metadata": {
     "tags": []
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ec395a7a-d575-4ddc-ac6b-18e43a82aca9",
    "metadata": {
     "tags": []
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "4f659de7-1450-4304-a9e2-7d886cf6e0a6",
    "metadata": {
     "tags": []
@@ -288,7 +287,7 @@
        "['target', 'id', 'date', 'flag', 'user', 'text']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "dcdb8892-b7aa-4d8d-a3ee-ca41ee0ab0df",
    "metadata": {},
    "outputs": [
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "b4a0d7c8-d0dd-4355-9d58-581948c1db8b",
    "metadata": {},
    "outputs": [
@@ -374,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "fbc409a1-6a86-454c-bd4c-8d9ede978ad7",
    "metadata": {},
    "outputs": [],
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "77da2333-bc03-40ce-9609-409888da5863",
    "metadata": {},
    "outputs": [
@@ -394,7 +393,7 @@
        "['target', 'date', 'text']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "7673d79f-5114-473d-b559-dbe138c43010",
    "metadata": {},
    "outputs": [
@@ -423,7 +422,7 @@
        "'Mon Apr 06 22:19:45 PDT 2009'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "2b4231bb-64c7-4f1e-a45a-f2728d99276b",
    "metadata": {},
    "outputs": [],
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "162f5092-2a20-4576-82db-5da46f9aa6a9",
    "metadata": {},
    "outputs": [],
@@ -463,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "546fa6b1-2b4c-4435-ab89-24b0d32cff2f",
    "metadata": {},
    "outputs": [],
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "b2a73c8f-2956-4b28-87bc-a2c87bf1dcf1",
    "metadata": {},
    "outputs": [],
@@ -493,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "e64d8634-08d1-4913-9998-577c630fab6f",
    "metadata": {},
    "outputs": [
@@ -536,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "f1c61260-322b-4514-b1ff-d7d9350e6ce5",
    "metadata": {
     "tags": []
@@ -583,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "10ab1c26-7f2f-45f6-b4dc-99221677d784",
    "metadata": {},
    "outputs": [],
@@ -595,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "c275fc4a-7abd-4d92-89ed-0e91f8b6cdb4",
    "metadata": {},
    "outputs": [],
@@ -607,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "da225aa6-5e37-4318-be26-8205b3717ce9",
    "metadata": {},
    "outputs": [],
@@ -629,7 +628,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_sentiments = sentiment140_spark.filter(F.col('label') == 1).limit(500)\n",
+    "negative_sentiments = sentiment140_spark.filter(F.col('label') == 0).limit(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_df = positive_sentiments.union(negative_sentiments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_df.toPandas().to_csv('../data/reduced_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "5ebf5389-ada3-4211-8241-ace69049c547",
    "metadata": {},
    "outputs": [],
